fix overflow bug bg image

--- a/easy-bank/src/css/app.css
+++ b/easy-bank/src/css/app.css
@@ -392,6 +392,10 @@ section {
   padding: 80px 0;
 }
 
+#root {
+  overflow: hidden;
+}
+
 .button {
   width: 200px;
   border-radius: 25px;
@@ -504,7 +508,6 @@ header {
   background-color: #fafafa;
   height: 450px;
   padding: 0;
-  overflow: hidden;
 }
 
 .intro {
