--- a/easy-bank/src/sass/_base.scss
+++ b/easy-bank/src/sass/_base.scss
@@ -52,6 +52,11 @@ h1,h2,h3,h4,h5,h6 {
 section {
     padding: 80px 0;
 }
+
+#root {
+    overflow: hidden;
+}
+
 // Button styles
 .button {
     width: 200px;
