--- a/easy-bank/src/sass/_hero.scss
+++ b/easy-bank/src/sass/_hero.scss
@@ -3,7 +3,7 @@
     background-color: #fafafa;
     height: 450px;
     padding: 0;
-    overflow: hidden;
+    // overflow: hidden;
 }
 .intro {
     display: flex;
